# MetodsOfAnalyzeUrbanData

./: README.md  main.py  requirements.txt  test.py
app/wheather/: config.py  open_meteo.py
exapmple/: demo_whether.ipynb  example.ipynb
fastapi_wheather_lab/: config.py  dependencies.py  init_dependencies.py  main.py  run.py
fastapi_wheather_lab/routes/: config.py  config_routes.py  health.py  info.py
fastapi_wheather_lab/schemas/: app_config.py  points.py  responses.py  runtime_config.py
fastapi_wheather_lab/services/: runtime_config_service.py  runtime_service.py
src/whether/: __init__.py  exeptions.py  whether.py
src/whether/data_aggregator/: BaseDataAggregator.py  DataAggregatorABC.py  open_meteo.py
src/whether/import_export/: exporters.py  importers.py
whether_history/: README.md  __init__.py  pyproject.toml
whether_history/src/whether_history/: HistoryDownloader.py  __init__.py  exeptions.py  whether.py  wind.py
whether_history/src/whether_history/data_aggregator/: BaseDataAggregator.py  __init__.py  open_meteo.py
whether_history/src/whether_history/import_export/: exporters.py  importers.py
