[project]
name = "whether-history"
version = "0.1.1"
description = ""
authors = [
    {name = "MikhailVystrchil",email = "Ratven@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "whether_history", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
